--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,58 @@
 </head>
 
 <body>
-	{{ content }}
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">sangupta</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">Blogs</a></li>
+            <li><a href="#contact">Projects</a></li>
+            <li><a href="#contact">Experiments</a></li>
+            <li><a href="#contact">Social</a></li>
+            <li><a href="#contact">Developer</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+    
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-3 col-md-2 sidebar">
+                <ul class="nav nav-sidebar">
+                    <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">Reports</a></li>
+                    <li><a href="#">Analytics</a></li>
+                    <li><a href="#">Export</a></li>
+                  </ul>
+            </div>
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                {{ content }}
+            </div>
+        </div>
+        <div class="row">
+                <footer class="footer">
+      <div class="container-fluid">
+        <p class="text-muted">
+            Copyright &copy; 2006-2014, Sandeep Gupta. All rights reserved.
+            <br>
+            All code and code snippets are Apache Licensed, unless otherwise noted.
+        </p>
+      </div>
+    </footer>
 
+
+        </div>
+    </div>
+    
 	<!-- Latest compiled and minified JavaScript -->
     <script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
     <script src="js/bootstrap-3.3.0.min.js" type="text/javascript"></script></body>
