--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Resume</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="/about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
