--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,6 +88,6 @@
     </div>
     
 	<!-- Latest compiled and minified JavaScript -->
-    <script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap-3.3.0.min.js" type="text/javascript"></script></body>
+    <script src="/js/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <script src="/js/bootstrap-3.3.0.min.js" type="text/javascript"></script></body>
 </html>
