--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
 	
     <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/assets/css/syntax.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/sangupta.css"/>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -88,6 +89,6 @@
     </div>
     
 	<!-- Latest compiled and minified JavaScript -->
-    <script src="/js/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="/js/bootstrap-3.3.0.min.js" type="text/javascript"></script></body>
+    <script src="/assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <script src="/assets/js/bootstrap-3.3.0.min.js" type="text/javascript"></script></body>
 </html>
