bug fixes, and added a blog page

--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -65,8 +65,6 @@ body {
   font-family: Monaco, "Courier New", monospace;
 }
 
-/** Fix PRE background **/
-pre {
-  background-color: #000;
-  color: #777;
+.post-content h2 {
+  font-size: 24px;
 }
