--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,10 +7,12 @@ layout: default
 <article>
     <header id="post-header">
         <h1 id="post-title">{{ post.title }}</h1>
-        <h4 id="post-subtitle"><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time></h4>
+        <h4 id="post-subtitle text-muted">
+            <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time>
+        </h4>
     </header>
 
-    <div id="post-content">
+    <div id="post-content" class="post-content">
         {{ content }}
 
         {% if post.category %}
