--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,19 +62,15 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3 col-md-2 sidebar">
-                <ul class="nav nav-sidebar">
-                    <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Reports</a></li>
-                    <li><a href="#">Analytics</a></li>
-                    <li><a href="#">Export</a></li>
-                  </ul>
+                {% include sidebar.html %}
             </div>
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 {{ content }}
             </div>
         </div>
-        <div class="row">
-                <footer class="footer">
+    </div>
+
+    <footer class="footer col-md-offset-2">
       <div class="container-fluid">
         <p class="text-muted">
             Copyright &copy; 2006-2014, Sandeep Gupta. All rights reserved.
@@ -83,10 +79,6 @@
         </p>
       </div>
     </footer>
-
-
-        </div>
-    </div>
     
 	<!-- Latest compiled and minified JavaScript -->
     <script src="/assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
