fixing up home page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,6 +7,13 @@
 </ul>
 -->
 
-<div class="center-block">
-	<img src="http://placehold.it/200x200" alt="Sandeep Gupta" class="img-circle" >
+<div class="relative">
+	<div class="center-block">
+		<img src="http://placehold.it/200x200" alt="Sandeep Gupta" class="img-circle" >
+	</div>
+	<div class="bottom footer">
+		Copyright &copy; 2006-2014
+		<br>
+		Sandeep Gupta. All rights reserved.
+	</div>
 </div>
