--- a/_includes/allposts.html
+++ b/_includes/allposts.html
@@ -1,3 +1,20 @@
 <!-- Show all current posts -->
 
 <h2>Recent Blog Posts</h2>
+
+{% if paginator.posts %}
+    {% for post in paginator.posts limit:5 %}
+        <section class="post">
+            <header class="post-header">
+                <h4 class="post-title"><a href="{{ post.url }}/">{{ post.title }}</a><small> &ndash; <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time></small></h4>
+            </header>
+            <div class="post-description">
+                <p>{{ post.excerpt }}</p>
+            </div>
+            <a href="{{ post.url }}/" class="pull-right">Read more</a>
+            <div class="clearfix"></div>
+        </section>
+    {% endfor %}
+{% else %}
+    <p>No posts found.</p>
+{% endif %}
