footer formatting changes

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
 </ul>
 -->
 
-<div class="relative">
+<div class="relative full-height">
 	<div class="center-block">
 		<img src="http://placehold.it/200x200" alt="Sandeep Gupta" class="img-circle" >
 	</div>
