--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -76,7 +76,13 @@ body {
 .relative {
   position: relative;
 }
+.full-height {
+  height: 100%;
+}
 .bottom {
   position: absolute;
   bottom: 0;
+}
+.footer {
+  font-size: 10px;
 }
