--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 
 <div class="relative full-height">
 	<div class="center-block">
-		<img src="http://placehold.it/200x200" alt="Sandeep Gupta" class="img-circle" >
+		<img src="http://placehold.it/200x200" alt="Sandeep Gupta" class="img-circle img-responsive" >
 	</div>
 	<div class="bottom footer">
 		Copyright &copy; 2006-2014
