--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <footer class="footer col-md-offset-2">
+    <footer class="footer col-md-offset-2 col-sm-offset-3">
       <div class="container-fluid">
         <p class="text-muted">
             Copyright &copy; 2006-2014, Sandeep Gupta. All rights reserved.
