fix sidepane copyright header, remove highlighting from top menu

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,8 +12,8 @@
 		<img src="http://placehold.it/200x200" alt="Sandeep Gupta" class="img-circle img-responsive" >
 	</div>
 	<div class="bottom footer">
-		Copyright &copy; 2006-2014
+		Copyright &copy; 2006-2014.
 		<br>
-		Sandeep Gupta. All rights reserved.
+		Sandeep Gupta
 	</div>
 </div>
