--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="/blogs.html">Blogs</a></li>
             <li><a href="#contact">Projects</a></li>
             <li><a href="#contact">Experiments</a></li>
