fix top menu links by adding stub pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,14 +45,14 @@
           <ul class="nav navbar-nav">
             <li><a href="#">Home</a></li>
             <li><a href="/blogs.html">Blogs</a></li>
-            <li><a href="#contact">Projects</a></li>
-            <li><a href="#contact">Experiments</a></li>
-            <li><a href="#contact">Social</a></li>
-            <li><a href="#contact">Developer</a></li>
+            <li><a href="/projects/index.html">Projects</a></li>
+            <li><a href="/experiments/index.html">Experiments</a></li>
+            <li><a href="#">Social</a></li>
+            <li><a href="#">Developer</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Resume</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/about.html#contactme">Contact</a></li>
             <li><a href="/about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
