add disqus to pages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,3 +48,5 @@ layout: default
         <p id="post-meta">Posted {{ category_content }}{{ tags_content }}</p>
     </div>
 </article>
+
+<div id="disqus_thread"></div>
