--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,4 +83,13 @@
 	<!-- Latest compiled and minified JavaScript -->
     <script src="/assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
     <script src="/assets/js/bootstrap-3.3.0.min.js" type="text/javascript"></script></body>
+    <script type="text/javascript">
+        var disqus_shortname = 'sangupta';
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+
 </html>
