starting to give final touch to the migrated site

--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -1,16 +1,16 @@
 I maintain the following two blogs as this is where my heart lies:
 
 <h3>
-	<a href="/blog/tech.html">Tech</a>
+	<a href="/blog/tech.html">Keep Walking!</a>
 </h3>
 
 <p>
 As a river meanders between various lands and creates a course, learning many a things; this 
-blog is a reflection of my musings during my ride in the roller-coaster called **code**.
+blog is a reflection of my musings during my ride in the roller-coaster called <b>code</b>.
 </p>
 
 <h3>
-	<a href="/blog/poetry.html">Poetry</a>
+	<a href="/blog/poetry.html">Poet Inside</a>
 </h3>
 
 <p>
