--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,47 @@
 
 <div class="relative full-height">
 	<div class="center-block">
-		<img src="http://placehold.it/200x200" alt="Sandeep Gupta" class="img-circle img-responsive" >
+		<img src="/assets/images/profile.jpg" alt="Sandeep Gupta" class="img-circle img-responsive" >
+		
+		<div class="sidebar-main-link">
+			<a href="#">Keep Walking</a>
+		</div>
+		
+		<div class="sidebar-main-link">
+			<a href="#">Poet Inside</a>
+		</div>
+
+		<div class="sidebar-main-link">
+			<a href="#">Coding Challenges</a>
+		</div>
+
+		<div class="sidebar-main-link">
+			<a href="#">Open Source</a>
+		</div>
+
+		<div class="sidebar-main-link">
+			<a href="#">Experiments</a>
+		</div>
+
+		<div class="social-links sidebar-main-link">
+			<span class="fa-stack fa-lg">
+				<i class="fa fa-circle fa-stack-2x"></i>
+				<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+			</span>
+			<span class="fa-stack fa-lg">
+				<i class="fa fa-circle fa-stack-2x"></i>
+				<i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
+			</span>
+			<br>
+			<span class="fa-stack fa-lg">
+				<i class="fa fa-circle fa-stack-2x"></i>
+				<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+			</span>
+			<span class="fa-stack fa-lg">
+				<i class="fa fa-circle fa-stack-2x"></i>
+				<i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
+			</span>
+		</div>
 	</div>
 	<div class="bottom footer">
 		Copyright &copy; 2006-2014.
