finalizing blog tags, and fixing home page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,54 +1,64 @@
-<!--
-<ul class="nav nav-sidebar">
-    <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-    <li><a href="#">Reports</a></li>
-    <li><a href="#">Analytics</a></li>
-    <li><a href="#">Export</a></li>
-</ul>
--->
-
 <div class="relative full-height">
 	<div class="center-block">
-		<img src="/assets/images/profile.jpg" alt="Sandeep Gupta" class="img-circle img-responsive" >
+		<img src="/assets/images/profile.jpg" alt="Sandeep Gupta" class="img-circle img-responsive profile-image" >
 		
 		<div class="sidebar-main-link">
 			<a href="#">Keep Walking</a>
+			<span class="side-kick">Engineering Blog</span>
 		</div>
 		
 		<div class="sidebar-main-link">
 			<a href="#">Poet Inside</a>
+			<span class="side-kick">Poems By Me</span>
 		</div>
 
 		<div class="sidebar-main-link">
 			<a href="#">Coding Challenges</a>
+			<span class="side-kick">Ones I have completed</span>
 		</div>
 
 		<div class="sidebar-main-link">
 			<a href="#">Open Source</a>
+			<span class="side-kick">Ready to use projects</span>
 		</div>
 
 		<div class="sidebar-main-link">
 			<a href="#">Experiments</a>
+			<span class="side-kick">Projects in Infancy</span>
 		</div>
 
 		<div class="social-links sidebar-main-link">
-			<span class="fa-stack fa-lg">
+			<a class="fa-stack fa-lg" href="https://www.facebook.com/sandy.pec">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-			</span>
-			<span class="fa-stack fa-lg">
+			</a>
+			<a class="fa-stack fa-lg" href="https://plus.google.com/u/0/110645714607919970386">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
-			</span>
-			<br>
-			<span class="fa-stack fa-lg">
+			</a>
+			<a class="fa-stack fa-lg" href="https://twitter.com/sangupta">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-			</span>
-			<span class="fa-stack fa-lg">
+			</a>
+
+			<br>
+
+			<a class="fa-stack fa-lg" href="https://github.com/sangupta">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
-			</span>
+			</a>
+			<a class="fa-stack fa-lg" href="http://in.linkedin.com/in/sandypec">
+				<i class="fa fa-circle fa-stack-2x"></i>
+				<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+			</a>
+			<a class="fa-stack fa-lg" href="http://www.flickr.com/photos/sangupta">
+				<i class="fa fa-circle fa-stack-2x"></i>
+				<i class="fa fa-flickr fa-stack-1x fa-inverse"></i>
+			</a>
+		</div>
+
+		<div class="sidebar-main-link">
+			<a href="#">Developer Social</a>
 		</div>
 	</div>
 	<div class="bottom footer">
