--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -90,7 +90,20 @@ body {
   display: block;
   padding-top: 10px;
   text-align: center;
+  margin-top: 10px;
 }
 .readMore {
   font-style: italic;
+}
+.side-kick {
+  display: block;
+  font-size: 12px;
+}
+a.fa-lg {
+  cursor: pointer;
+}
+.profile-image {
+  padding:0;
+  margin:0 auto;
+  width: 120px;
 }
