--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,27 +3,27 @@
 		<img src="/assets/images/profile.jpg" alt="Sandeep Gupta" class="img-circle img-responsive profile-image" >
 		
 		<div class="sidebar-main-link">
-			<a href="#">Keep Walking</a>
+			<a href="/blog/tech.html">Keep Walking</a>
 			<span class="side-kick">Engineering Blog</span>
 		</div>
 		
 		<div class="sidebar-main-link">
-			<a href="#">Poet Inside</a>
+			<a href="/blog/poetry.html">Poet Inside</a>
 			<span class="side-kick">Poems By Me</span>
 		</div>
 
 		<div class="sidebar-main-link">
-			<a href="#">Coding Challenges</a>
+			<a href="/coding-challenges.html">Coding Challenges</a>
 			<span class="side-kick">Ones I have completed</span>
 		</div>
 
 		<div class="sidebar-main-link">
-			<a href="#">Open Source</a>
+			<a href="/open-source.html">Open Source</a>
 			<span class="side-kick">Ready to use projects</span>
 		</div>
 
 		<div class="sidebar-main-link">
-			<a href="#">Experiments</a>
+			<a href="/experiments/index.html">Experiments</a>
 			<span class="side-kick">Projects in Infancy</span>
 		</div>
 
@@ -60,10 +60,5 @@
 		<div class="sidebar-main-link">
 			<a href="#">Developer Social</a>
 		</div>
-	</div>
-	<div class="bottom footer">
-		Copyright &copy; 2006-2014.
-		<br>
-		Sandeep Gupta
 	</div>
 </div>
