--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -82,6 +82,10 @@ body {
 }
 .footer {
   font-size: 10px;
+  padding-top: 20px;
+  background-color: #f5f5f5;
+  color: #777;
+  margin-top: -40px;
 }
 .social-links {
   font-size: 20px;
@@ -106,4 +110,7 @@ a.fa-lg {
   padding:0;
   margin:0 auto;
   width: 120px;
+}
+.post {
+  padding-top: 25px;
 }
