--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -1,7 +1,10 @@
+html {
+  height: 100%;
+}
 body {
   padding-top: 50px;
+  height: 100%;
 }
-
 /*
  * Sidebar
  */
@@ -85,7 +88,6 @@ body {
   padding-top: 20px;
   background-color: #f5f5f5;
   color: #777;
-  margin-top: -40px;
 }
 .social-links {
   font-size: 20px;
@@ -113,4 +115,8 @@ a.fa-lg {
 }
 .post {
   padding-top: 25px;
+}
+.full-height {
+  height: 100%;
+  min-height: 100%;
 }
