--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -55,6 +55,28 @@
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-flickr fa-stack-1x fa-inverse"></i>
 			</a>
+
+			<br>
+
+			<a class="fa-stack fa-lg" href="#">
+				<i class="fa fa-circle fa-stack-2x"></i>
+				<i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
+			</a>
+			<a class="fa-stack fa-lg" href="#">
+				<i class="fa fa-circle fa-stack-2x"></i>
+				<i class="fa fa-hacker-news fa-stack-1x fa-inverse"></i>
+			</a>
+			<a class="fa-stack fa-lg" href="#">
+				<i class="fa fa-circle fa-stack-2x"></i>
+				<i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
+			</a>
+		</div>
+
+		<div class="social-links sidebar-main-link">
+			<a class="fa-stack fa-lg" href="#">
+				<i class="fa fa-circle fa-stack-2x"></i>
+				<i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+			</a>
 		</div>
 
 		<div class="sidebar-main-link">
