--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -63,6 +63,10 @@ body {
 .main .page-header {
   margin-top: 0;
 }
+.main {
+  background-image: url("/assets/images/bg.png");
+  background-repeat: repeat;
+}
 .monoDate {
   font-family: Monaco, "Courier New", monospace;
 }
@@ -88,6 +92,10 @@ body {
   padding-top: 20px;
   background-color: #f5f5f5;
   color: #777;
+}
+.footer p {
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 .social-links {
   font-size: 20px;
