--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
     <!-- Turn on IE cleartype -->
     <meta http-equiv="cleartype" content="on">
 	
-    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/assets/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/syntax.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/sangupta.css"/>
 
@@ -61,7 +61,7 @@
     
 	<!-- Latest compiled and minified JavaScript -->
     <script src="/assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="/assets/js/bootstrap-3.3.0.min.js" type="text/javascript"></script></body>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" type="text/javascript"></script></body>
 
     <!-- we include disqus below this line from disqus.html -->
 </html>
