--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,11 +5,13 @@
 		<div class="sidebar-main-link">
 			<a href="/blog/tech.html">Keep Walking</a>
 			<span class="side-kick">Engineering Blog</span>
+			<span class="side-kick"><a href="/blog/tech.html">Archive</a> | <a href="/blog/tech.rss">RSS</a></span>
 		</div>
 		
 		<div class="sidebar-main-link">
 			<a href="/blog/poetry.html">Poet Inside</a>
 			<span class="side-kick">Poems By Me</span>
+			<span class="side-kick"><a href="/blog/poetry.html">Archive</a> | <a href="/blog/poetry.rss">RSS</a></span>
 		</div>
 
 		<div class="sidebar-main-link">
@@ -58,15 +60,15 @@
 
 			<br>
 
-			<a class="fa-stack fa-lg" href="#">
+			<a class="fa-stack fa-lg" href="http://bitbucket.org/sangupta">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
 			</a>
-			<a class="fa-stack fa-lg" href="#">
+			<a class="fa-stack fa-lg" href="https://news.ycombinator.com/user?id=prostoalex">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-hacker-news fa-stack-1x fa-inverse"></i>
 			</a>
-			<a class="fa-stack fa-lg" href="#">
+			<a class="fa-stack fa-lg" href="http://stackoverflow.com/users/75239/sangupta">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
 			</a>
@@ -77,10 +79,6 @@
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-rss fa-stack-1x fa-inverse"></i>
 			</a>
-		</div>
-
-		<div class="sidebar-main-link">
-			<a href="#">Developer Social</a>
 		</div>
 	</div>
 </div>
