--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -70,6 +70,14 @@ body {
 .monoDate {
   font-family: Monaco, "Courier New", monospace;
 }
+.post-content {
+  font-size: 16px;
+  line-height: 32px;
+  margin-top: 40px;
+}
+.post-content pre {
+  line-height: 22px;
+}
 .post-content h2 {
   font-size: 24px;
 }
@@ -127,4 +135,7 @@ a.fa-lg {
 .full-height {
   height: 100%;
   min-height: 100%;
+}
+.archive .row {
+  padding-top: 10px;
 }
