--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,15 +3,15 @@
 		<img src="/assets/images/profile.jpg" alt="Sandeep Gupta" class="img-circle img-responsive profile-image" >
 		
 		<div class="sidebar-main-link">
-			<a href="/blog/tech.html">Keep Walking</a>
+			<a href="/tech/index.html">Keep Walking</a>
 			<span class="side-kick">Engineering Blog</span>
-			<span class="side-kick"><a href="/blog/tech.html">Archive</a> | <a href="/blog/tech.rss">RSS</a></span>
+			<span class="side-kick"><a href="/tech/archive.html">Archive</a> | <a href="/tech.rss">RSS</a></span>
 		</div>
 		
 		<div class="sidebar-main-link">
-			<a href="/blog/poetry.html">Poet Inside</a>
+			<a href="/poetry/index.html">Poet Inside</a>
 			<span class="side-kick">Poems By Me</span>
-			<span class="side-kick"><a href="/blog/poetry.html">Archive</a> | <a href="/blog/poetry.rss">RSS</a></span>
+			<span class="side-kick"><a href="/poetry/archive.html">Archive</a> | <a href="/poetry.rss">RSS</a></span>
 		</div>
 
 		<div class="sidebar-main-link">
@@ -30,45 +30,45 @@
 		</div>
 
 		<div class="social-links sidebar-main-link">
-			<a class="fa-stack fa-lg" href="https://www.facebook.com/sandy.pec">
+			<a class="fa-stack fa-lg" href="https://www.facebook.com/sandy.pec" target="_blank">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
 			</a>
-			<a class="fa-stack fa-lg" href="https://plus.google.com/u/0/110645714607919970386">
+			<a class="fa-stack fa-lg" href="https://plus.google.com/u/0/110645714607919970386" target="_blank">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
 			</a>
-			<a class="fa-stack fa-lg" href="https://twitter.com/sangupta">
+			<a class="fa-stack fa-lg" href="https://twitter.com/sangupta" target="_blank">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
 			</a>
 
 			<br>
 
-			<a class="fa-stack fa-lg" href="https://github.com/sangupta">
+			<a class="fa-stack fa-lg" href="https://github.com/sangupta" target="_blank">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
 			</a>
-			<a class="fa-stack fa-lg" href="http://in.linkedin.com/in/sandypec">
+			<a class="fa-stack fa-lg" href="http://in.linkedin.com/in/sandypec" target="_blank">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
 			</a>
-			<a class="fa-stack fa-lg" href="http://www.flickr.com/photos/sangupta">
+			<a class="fa-stack fa-lg" href="http://www.flickr.com/photos/sangupta" target="_blank">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-flickr fa-stack-1x fa-inverse"></i>
 			</a>
 
 			<br>
 
-			<a class="fa-stack fa-lg" href="http://bitbucket.org/sangupta">
+			<a class="fa-stack fa-lg" href="http://bitbucket.org/sangupta" target="_blank">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
 			</a>
-			<a class="fa-stack fa-lg" href="https://news.ycombinator.com/user?id=prostoalex">
+			<a class="fa-stack fa-lg" href="https://news.ycombinator.com/user?id=prostoalex" target="_blank">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-hacker-news fa-stack-1x fa-inverse"></i>
 			</a>
-			<a class="fa-stack fa-lg" href="http://stackoverflow.com/users/75239/sangupta">
+			<a class="fa-stack fa-lg" href="http://stackoverflow.com/users/75239/sangupta" target="_blank">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
 			</a>
