fix rss and index pages for both blogs

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -75,7 +75,7 @@
 		</div>
 
 		<div class="social-links sidebar-main-link">
-			<a class="fa-stack fa-lg" href="#">
+			<a class="fa-stack fa-lg" href="/blog.rss">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-rss fa-stack-1x fa-inverse"></i>
 			</a>
