--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -143,3 +143,30 @@ a.fa-lg {
 .archive .row {
   padding-top: 10px;
 }
+table {
+  border: 1px solid #ddd;
+  max-width: 100%;
+  margin-bottom: 20px;
+  background-color: transparent;
+  border-spacing: 0;
+  border-collapse: collapse;
+  display: table;
+}
+table>tbody>tr:nth-child(odd) {
+  background-color: #f9f9f9;
+}
+table>thead>tr>th, table>tbody>tr>th, table>tfoot>tr>th, table>thead>tr>td, table>tbody>tr>td, table>tfoot>tr>td {
+  padding: 8px;
+  line-height: 1.42857143;
+  vertical-align: top;
+  border-top: 1px solid #ddd;
+}
+table>caption+thead>tr:first-child>th, table>colgroup+thead>tr:first-child>th, table>thead:first-child>tr:first-child>th, table>caption+thead>tr:first-child>td, .table>colgroup+thead>tr:first-child>td, .table>thead:first-child>tr:first-child>td {
+  border-top: 0;
+}
+table>thead>tr>th, table>thead>tr>td {
+  border-bottom-width: 2px;
+}
+table>thead>tr>th, table>tbody>tr>th, table>tfoot>tr>th, table>thead>tr>td, table>tbody>tr>td, table>tfoot>tr>td {
+  border: 1px solid #ddd;
+}
