adding other pages and some JS code to fetch a list of live projects

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,11 +22,7 @@
 		<div class="sidebar-main-link">
 			<a href="/open-source.html">Open Source</a>
 			<span class="side-kick">Ready to use projects</span>
-		</div>
-
-		<div class="sidebar-main-link">
-			<a href="/experiments/index.html">Experiments</a>
-			<span class="side-kick">Projects in Infancy</span>
+			<span class="side-kick">some in infancy</span>
 		</div>
 
 		<div class="social-links sidebar-main-link">
