--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,9 @@
     <script src="/assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/assets/js/sangupta.js" type="text/javascript"></script>
-
+    <script src='https://apis.google.com/js/plusone.js' type='text/javascript'></script>
+    <script src='http://static.ak.fbcdn.net/connect.php/js/FB.Share' type='text/javascript'></script>
+    
     <!-- Check for page specific javascripts -->
     {% if page.js_onload %}
         <script>
@@ -78,6 +80,9 @@
     {% endif %}
 
     <!-- we include disqus below this line from disqus.html -->
+
+    <!-- include analytics below this line -->
+    
     </body>
 
 </html>
