--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,69 +4,94 @@ layout: default
 
 {% assign post = page %}
 
-<article>
-    <header id="post-header">
-        <h1 id="post-title">{{ post.title }}</h1>
-        <h4 id="post-subtitle text-muted">
-            <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time>
-        </h4>
-    </header>
+<div class="row">
+    <div class="col-md-9">
+        <article>
+            <header id="post-header">
+                <div class="row">
+                    <div class="col-md-9">
+                        <h1 id="post-title">{{ post.title }}</h1>
+                        <h4 id="post-subtitle text-muted">
+                            <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time>
+                        </h4>
+                    </div>
+                    <div class="col-md-3 pad-top-20">
+                        <div class="pull-right">
+                            {% if post.sharingURL %}
+                                <g:plusone href='{{ post.sharingURL }}' size='tall'></g:plusone>
 
-    <div id="post-content" class="post-content">
-        {{ content }}
+                                <a href='http://www.facebook.com/sharer.php?u={{ post.sharingURL }}&t={{ post.title }}' name='fb_share' type='box_count'>Share</a>
+                            {% else %}
+                                <g:plusone href='{{ post.permalink }}' size='tall'></g:plusone>
 
-        {% if post.category %}
-            {% for site_category in site.data.categories %}
-                {% if site_category.slug == post.category %}
-                    {% assign category = site_category %}
-                {% endif %}
-            {% endfor %}
-            {% if category %}
-                {% capture category_content %} in <span class="label" style="background-color:{{ category.color }}"><a href="/blog/category/{{ category.slug }}">{{ category.name }}</a></span>{% endcapture %}
-            {% endif %}
-        {% else %}
-            {% assign category_content = '' %}
-        {% endif %}
+                                <a href='http://www.facebook.com/sharer.php?u={{ post.permalink }}&t={{ post.title }}' name='fb_share' type='box_count'>Share</a>
+                            {% endif %}
 
-        {% if post.tags.size > 0 %}
-            {% capture tags_content %} with {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
-            {% for post_tag in post.tags %}
-                {% for data_tag in site.data.tags %}
-                    {% if data_tag.slug == post_tag %}
-                        {% assign tag = data_tag %}
+                        </div>
+                    </div>
+                </div>
+            </header>
+
+            <div id="post-content" class="post-content">
+                {{ content | remove: '<p></p>' }}
+
+                {% if post.category %}
+                    {% for site_category in site.data.categories %}
+                        {% if site_category.slug == post.category %}
+                            {% assign category = site_category %}
+                        {% endif %}
+                    {% endfor %}
+                    {% if category %}
+                        {% capture category_content %} in <span class="label" style="background-color:{{ category.color }}"><a href="/blog/category/{{ category.slug }}">{{ category.name }}</a></span>{% endcapture %}
                     {% endif %}
-                {% endfor %}
-                {% if tag %}
-                    {% capture tags_content_temp %}{{ tags_content }}<a href="/blog/tag/{{ tag.slug }}">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
-                    {% assign tags_content = tags_content_temp %}
+                {% else %}
+                    {% assign category_content = '' %}
                 {% endif %}
-            {% endfor %}
-        {% else %}
-            {% assign tags_content = '' %}
-        {% endif %}
 
-        <p id="post-meta">Posted {{ category_content }}{{ tags_content }}</p>
+                {% if post.tags.size > 0 %}
+                    {% capture tags_content %} with {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
+                    {% for post_tag in post.tags %}
+                        {% for data_tag in site.data.tags %}
+                            {% if data_tag.slug == post_tag %}
+                                {% assign tag = data_tag %}
+                            {% endif %}
+                        {% endfor %}
+                        {% if tag %}
+                            {% capture tags_content_temp %}{{ tags_content }}<a href="/blog/tag/{{ tag.slug }}">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
+                            {% assign tags_content = tags_content_temp %}
+                        {% endif %}
+                    {% endfor %}
+                {% else %}
+                    {% assign tags_content = '' %}
+                {% endif %}
+
+                <p id="post-meta">Posted {{ category_content }}{{ tags_content }}</p>
+            </div>
+        </article>
+
+        <nav>
+            <ul class="pager">
+                {% if page.previous.url %}
+                <li class="previous">
+                    <a href="{{page.previous.url}}">
+                        <span aria-hidden="true">&larr;</span> {{page.previous.title}}
+                    </a>
+                </li>
+                {% endif %}
+
+                {% if page.next.url %}
+                <li class="next">
+                    <a href="{{page.next.url}}">
+                        {{page.next.title}} <span aria-hidden="true">&rarr;</span>
+                    </a>
+                </li>
+                {% endif %} 
+            </ul>
+        </nav>
+
+        <div id="disqus_thread"></div>
     </div>
-</article>
-
-<nav>
-    <ul class="pager">
-        {% if page.previous.url %}
-        <li class="previous">
-            <a href="{{page.previous.url}}">
-                <span aria-hidden="true">&larr;</span> {{page.previous.title}}
-            </a>
-        </li>
-        {% endif %}
-
-        {% if page.next.url %}
-        <li class="next">
-            <a href="{{page.next.url}}">
-                {{page.next.title}} <span aria-hidden="true">&rarr;</span>
-            </a>
-        </li>
-        {% endif %} 
-    </ul>
-</nav>
-
-<div id="disqus_thread"></div>
+    <div class="col-md-3">
+        {% include post-sidebar.html %}
+    </div>
+</div>
