--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -5,6 +5,9 @@ body {
   padding-top: 50px;
   height: 100%;
 }
+.pad-top-20 {
+  padding-top: 20px;
+}
 /*
  * Sidebar
  */
@@ -53,6 +56,7 @@ body {
 
 .main {
   padding: 20px;
+  padding-top: 0;
 }
 @media (min-width: 768px) {
   .main {
@@ -70,21 +74,25 @@ body {
 .monoDate {
   font-family: Monaco, "Courier New", monospace;
 }
-.post-content {
+.main {
   font-size: 16px;
   line-height: 32px;
-  margin-top: 40px;
 }
-.post-content pre {
+.main pre {
   line-height: 22px;
 }
-.post-content h2 {
+.main h2 {
   font-size: 24px;
 }
-.post-content h2, .post-content h3, .post-content h4, .post-content h5, .post-content h6 {
-  padding-top: 20px;
+.main h2, .main h3, .main h4, .main h5, .main h6 {
+/*   padding-top: 20px; */
 }
-
+.post-content p, .page-content p {
+  padding-top: 30px;
+}
+li p {
+  padding-top: 0 !important;
+}
 body {
   background-image: url("/assets/images/bg.png");
   background-repeat: repeat;
@@ -169,4 +177,7 @@ table>thead>tr>th, table>thead>tr>td {
 }
 table>thead>tr>th, table>tbody>tr>th, table>tfoot>tr>th, table>thead>tr>td, table>tbody>tr>td, table>tfoot>tr>td {
   border: 1px solid #ddd;
+}
+code.language-text {
+  color: #0ee;
 }
