--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -8,11 +8,6 @@ body {
 .pad-top-20 {
   padding-top: 20px;
 }
-/*
- * Sidebar
- */
-
-/* Hide for mobile, show later */
 .sidebar {
   display: none;
 }
@@ -26,13 +21,11 @@ body {
     display: block;
     padding: 20px;
     overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    overflow-y: auto;
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
   }
 }
-
-/* Sidebar navigation */
 .nav-sidebar {
   margin-right: -21px; /* 20px padding + 1px border */
   margin-bottom: 20px;
@@ -48,13 +41,7 @@ body {
   color: #fff;
   background-color: #428bca;
 }
-
-
-/*
- * Main content
- */
-
-.main {
+main {
   padding: 20px;
   padding-top: 0;
 }
@@ -81,11 +68,11 @@ body {
 .main pre {
   line-height: 22px;
 }
+.main h1 {
+  line-height: 54px;
+}
 .main h2 {
   font-size: 24px;
-}
-.main h2, .main h3, .main h4, .main h5, .main h6 {
-/*   padding-top: 20px; */
 }
 .post-content p, .page-content p {
   padding-top: 30px;
@@ -180,4 +167,15 @@ table>thead>tr>th, table>tbody>tr>th, table>tfoot>tr>th, table>thead>tr>td, tabl
 }
 code.language-text {
   color: #0ee;
+}
+.poetry pre, .poetry pre code {
+  background-color: transparent !important;
+  color: #333;
+  border: none !important;
+  padding: 0;
+  margin: 0;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 14px;
+  line-height: 22px;
+  margin-top: 30px;
 }
