enable disqus comments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,6 +80,7 @@
     {% endif %}
 
     <!-- we include disqus below this line from disqus.html -->
+    {% include disqus.html %}
 
     <!-- include analytics below this line -->
     
