added notice for change in feed location

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,8 @@
         <div class="row">
             <div class="alert alert-warning col-md-offset-2 col-sm-offset-3">
                 This site and blog are currently in migration. Some content may not be available, and/or, posts/pages may not appear correct!
+                <br>
+                The site/blog's feed URL has changed to <a href="http://sangupta.com/feed.xml">http://sangupta.com/feed.xml</a>
             </div>
         </div>
 
