--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,11 +25,11 @@
     <meta http-equiv="cleartype" content="on">
 
     {% if page.title %}
-    <meta property="og:title" value="{{ page.title }}" />
+    <meta property="og:title" content="{{ page.title }}" />
     {% endif %}
 
     {% if page.fbimage %}
-    <meta property="og:image" value="{{ page.fbimage }}" />
+    <meta property="og:image" content="{{ page.fbimage }}" />
 	{% endif %}
 
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
