fixing for twitter/facebook crawlers

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,13 +24,23 @@
     <!-- Turn on IE cleartype -->
     <meta http-equiv="cleartype" content="on">
 
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:domain" content="sangupta.com"/>
+
+    {% if page.permalink %}
+    <meta property="og:url" content="{{ page.permalink }}" />
+    {% endif %}
+
     {% if page.title %}
-    <meta property="og:title" content="{{ page.title }}" />
+    <meta name="twitter:title" property="og:title" itemprop="title name" content="{{ page.title }}" />
     {% endif %}
 
     {% if page.fbimage %}
-    <meta property="og:image" content="{{ page.fbimage }}" />
+    <meta property="og:image" itemprop="image primaryImageOfPage" content="{{ page.fbimage }}" />
 	{% endif %}
+
+    <meta name="twitter:app:country" content="IN" />
 
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
