fix og:url property

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     {% if page.permalink %}
     <meta property="og:url" content="{{ page.permalink }}" />
     {% else %}
-    <meta property="og:url" content="{{ page.url }}" />
+    <meta property="og:url" content="http://sangupta.com{{ page.url }}" />
     {% endif %}
 
     {% if page.title %}
