fix blog links on home page

--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -1,7 +1,7 @@
 I maintain the following two blogs as this is where my heart lies:
 
 <h3>
-	<a href="/blog/tech.html">Keep Walking!</a>
+	<a href="/tech/index.html">Keep Walking!</a>
 </h3>
 
 <p>
@@ -10,7 +10,7 @@ blog is a reflection of my musings during my ride in the roller-coaster called <
 </p>
 
 <h3>
-	<a href="/blog/poetry.html">Poet Inside</a>
+	<a href="/poetry/index.html">Poet Inside</a>
 </h3>
 
 <p>
