fix layout problem with FB share button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
                         </h4>
                     </div>
                     <div class="col-md-3 pad-top-20">
-                        <div class="pull-right">
+                        <div class="pull-right flexbox">
                             {% if post.sharingURL %}
                                 <g:plusone href='{{ post.sharingURL }}' size='tall'></g:plusone>
 
