--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,24 +4,24 @@
 		
 		<div class="sidebar-main-link">
 			<a href="/tech/index.html">Keep Walking</a>
-			<span class="side-kick">Engineering Blog</span>
+			<span class="side-kick">all about engineering</span>
 			<span class="side-kick"><a href="/tech/archive.html">Archive</a> | <a href="/tech.rss">RSS</a></span>
 		</div>
 		
 		<div class="sidebar-main-link">
 			<a href="/poetry/index.html">Poet Inside</a>
-			<span class="side-kick">Poems By Me</span>
+			<span class="side-kick">poems, by me!</span>
 			<span class="side-kick"><a href="/poetry/archive.html">Archive</a> | <a href="/poetry.rss">RSS</a></span>
 		</div>
 
 		<div class="sidebar-main-link">
 			<a href="/coding-challenges.html">Coding Challenges</a>
-			<span class="side-kick">Ones I have completed</span>
+			<span class="side-kick">ones I could complete</span>
 		</div>
 
 		<div class="sidebar-main-link">
 			<a href="/open-source.html">Open Source</a>
-			<span class="side-kick">Ready to use projects</span>
+			<span class="side-kick">some ready-to-use</span>
 			<span class="side-kick">some in infancy</span>
 		</div>
 
