beautifying the blog by making theme changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,9 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/syntax.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/sangupta.css"/>
 
+    <!-- load google fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
