--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -4,6 +4,10 @@ html {
 body {
   padding-top: 50px;
   height: 100%;
+  font-family: Merriweather, Georgia, 'Times New Roman', serif;
+}
+code {
+  color: #777;  
 }
 .pad-top-20 {
   padding-top: 20px;
@@ -26,7 +30,7 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
     background-color: #f5f5f5;
-    border-right: 1px solid #eee;
+    border-right: 1px solid #ddd;
   }
 }
 .nav-sidebar {
@@ -58,14 +62,18 @@ main {
   margin-top: 0;
 }
 .main {
-  background-image: url("/assets/images/bg.png");
+/*  background-image: url("/assets/images/bg.png");
   background-repeat: repeat;
+*/
+background-color: white;
 }
 .monoDate {
   font-family: Monaco, "Courier New", monospace;
+  font-size: 14px;
 }
 .main {
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: 300;
   line-height: 32px;
 }
 .main pre {
@@ -177,9 +185,9 @@ code.language-text {
   border: none !important;
   padding: 0;
   margin: 0;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 14px;
-  line-height: 22px;
+  font-family: Merriweather, Georgia, 'Times New Roman', serif;
+  font-size: 16px;
+  line-height: 28px;
   margin-top: 30px;
 }
 .statcounter {
@@ -190,4 +198,37 @@ code.language-text {
 }
 .fb-share-button {
   padding-left: 20px;
+}
+a {
+  font-weight: 400;
+}
+.post-title {
+  margin-bottom: 30px;
+  text-align: center;
+}
+.archive {
+  font-size: 16px;
+}
+.archive a {
+  font-weight: 300 !important;
+}
+.highlight {
+  padding: 0 40px;
+}
+.post-description p {
+  margin-bottom: 30px;
+}
+article.one-poem:after, section.post:after {
+  background-image: url(/assets/images/divider.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  clear: both;
+  content: "";
+  display: block;
+  margin: 59.4px 0;
+  width: 100%;
+  height: 40px;
+}
+.poem-content {
+  text-align: center;
 }
