some more styling for pages

--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -1,5 +1,3 @@
-I maintain the following two blogs as this is where my heart lies:
-
 <h3>
 	<a href="/tech/index.html">Keep Walking!</a>
 </h3>
@@ -7,6 +5,11 @@ I maintain the following two blogs as this is where my heart lies:
 <p>
 As a river meanders between various lands and creates a course, learning many a things; this 
 blog is a reflection of my musings during my ride in the roller-coaster called <b>code</b>.
+</p>
+<p>
+<code>Keep Walking</code> is a collection of all my learnings I have gained as a software developer
+over the many years. It also is a repo of all the code snippets, open-source frameworks that I
+have created over time.
 </p>
 
 <h3>
@@ -20,14 +23,11 @@ language. What could be a better way than discovering the music inside yourself 
 Words are the soul of any rythm, any sort of music.
 </p>
 
-<p>
-In the past I have also contributed to the following blogs:
-</p>
-
 <h3>
 	<a href="http://goodtoknowit.blogspot.com/" target="_blank">Thought Process - Good to know It</a>
 </h3>
 
 <p>
-A blog about invoking the though process by looking at various puzzles.
+A blog about invoking the though process by looking at various puzzles - started by a dear friend, but
+more or less dead now.
 </p>
