--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -6,6 +6,21 @@ body {
   height: 100%;
   font-family: Merriweather, Georgia, 'Times New Roman', serif;
 }
+h1, h2, h3 {
+  margin-bottom: 30px;
+}
+h4 {
+  font-size: 20px;
+  font-weight: 400;
+}
+h5 {
+  font-size: 18px;
+  font-weight: 400;
+}
+h6 {
+  font-size: 16px;
+  font-weight: 400;
+}
 code {
   color: #777;  
 }
@@ -67,6 +82,9 @@ main {
 */
 background-color: white;
 }
+.main p {
+  margin-bottom: 25px;
+}
 .monoDate {
   font-family: Monaco, "Courier New", monospace;
   font-size: 14px;
@@ -83,7 +101,9 @@ background-color: white;
   line-height: 54px;
 }
 .main h2 {
-  font-size: 24px;
+  font-size: 36px;
+  text-align: center;
+  font-weight: 400;
 }
 .post-content p, .page-content p {
   padding-top: 30px;
