--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -131,6 +131,7 @@ body {
   padding-top: 20px;
   background-color: #f5f5f5;
   color: #777;
+  line-height: 20px;
 }
 .footer p {
   margin-top: 20px;
