--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,10 +7,10 @@
       <ul class="nav navbar-nav">
         <li><a href="/blogs.html">Blogs</a></li>
         <li><a href="/projects/index.html">Projects</a></li>
-        <li><a href="/experiments/index.html">Experiments</a></li>
+        <li><a href="/projects/index.html#experiments">Experiments</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/about.html">About</a></li>
+        <li><a href="/about.html">About Me</a></li>
       </ul>
     </div>
   </div>
