fix bold style as this is HTML and not markdown

--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -7,7 +7,7 @@ As a river meanders between various lands and creates a course, learning many a 
 blog is a reflection of my musings during my ride in the roller-coaster called <b>code</b>.
 </p>
 <p>
-**Keep Walking** is a collection of all my learnings I have gained as a software developer
+<b>Keep Walking</b> is a collection of all my learnings I have gained as a software developer
 over the many years. It also is a repo of all the code snippets, open-source frameworks that I
 have created over time.
 </p>
