worked up text to make it better

--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -238,7 +238,7 @@ a {
 .post-description p {
   margin-bottom: 30px;
 }
-article.one-poem:after, section.post:after {
+article.one-poem:after, section.post:after, hr:after {
   background-image: url(/assets/images/divider.png);
   background-position: center top;
   background-repeat: no-repeat;
@@ -248,6 +248,11 @@ article.one-poem:after, section.post:after {
   margin: 59.4px 0;
   width: 100%;
   height: 40px;
+}
+
+hr {
+  border-top: 0;
+  height: 60px;
 }
 .poem-content {
   text-align: center;
