--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -28,6 +28,8 @@ layout: default
 	{{ content }}
 </div>
 
+<div id="disqus_thread"></div>
+
 {% if page.github %}
     <a href="https://github.com/sangupta/{{page.github}}" target="_blank">
   		<img style="position: absolute; top: 0; right: 0; border: 0;" src="//s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub">
