added stub page for resume

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,6 +10,7 @@
         <li><a href="/projects/index.html#experiments">Experiments</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+		<li><a href="/resume.html">R&eacute;sum&eacute;</a></li>
         <li><a href="/about.html">About Me</a></li>
       </ul>
     </div>
