--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -64,9 +64,9 @@
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-hacker-news fa-stack-1x fa-inverse"></i>
 			</a>
-			<a class="fa-stack fa-lg" href="http://stackoverflow.com/users/75239/sangupta" target="_blank">
+			<a class="fa-stack fa-lg" href="https://instagram.com/sandypec" target="_blank">
 				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
+				<i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
 			</a>
 		</div>
 
