Remove name from page title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<!-- title of the page -->
-    <title>{% if page.title %}{{ page.title }} | {% endif %}Sandeep Gupta</title>
+    <title>{% if page.title %}{{ page.title }}{% else %}Sandeep Gupta{% endif %}</title>
 
     <meta charset="utf-8">
     <meta content="text/html; charset=UTF-8" http-equiv="content-type"/>
