--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -7,7 +7,7 @@ body {
   font-family: Merriweather, Georgia, 'Times New Roman', serif;
 }
 h1, h2, h3 {
-  margin-bottom: 30px;
+  margin-top: 25px;
 }
 h4 {
   font-size: 20px;
@@ -23,6 +23,7 @@ h6 {
 }
 code {
   color: #777;
+  background-color: #f5f5f5;
 }
 .pad-top-20 {
   padding-top: 20px;
@@ -81,7 +82,7 @@ main {
   min-height: 500px;
 }
 .main p {
-  margin-bottom: 25px;
+  margin-bottom: 10px;
 }
 .monoDate {
   font-family: Monaco, "Courier New", monospace;
@@ -95,6 +96,7 @@ main {
 .main pre {
   line-height: 22px;
   margin-bottom: 30px;
+  font-size: 14px;
 }
 .main h1 {
   line-height: 54px;
@@ -237,10 +239,23 @@ a {
   font-weight: 300 !important;
 }
 .highlight {
-  padding: 0 40px;
+  padding: 20px;
 }
 .post-description p {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
+}
+.post-description h1 {
+  font-size: 28px;
+  text-align: left;
+}
+.post-description h2 {
+  font-size: 24px;
+  border: none;
+  margin-bottom: 15px;
+}
+.post-description h3 {
+  font-size: 20px;
+  text-align: left;
 }
 article.one-poem:after, section.post:after, hr:after {
   background-image: url(/assets/images/divider.png);
@@ -275,4 +290,7 @@ textarea {
   line-height: 20px;
   font-weight: normal;
   font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+}
+.alert-info a {
+  color: #6495ed;
 }
