updated copyright year

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,9 +80,9 @@
     <footer class="footer col-md-offset-2 col-sm-offset-3">
       <div class="container-fluid">
         <p>
-            Copyright &copy; 2006-2016, Sandeep Gupta. All rights reserved.
+            Copyright &copy; 2006-2018, Sandeep Gupta.
             <br>
-            All code and code snippets are Apache Licensed, unless otherwise noted.
+            All code is Apache Licensed, unless otherwise noted.
         </p>
       </div>
     </footer>
